将租户实体ID类型从Long改为String并优化相关逻辑